[package]
name = "raydium-data"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "2"
spl-token = "4.0.0"
solana-sdk = "2"
raydium = { path = "./amm_v3_interface", package = "amm_v3_interface"}
solana-client = "2"
base64 = { version = "0.21.4", default-features = false, features = ["alloc"] }
